# mdmemo

./: .gitignore  README.md  index.html  next.config.js  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: publish-nightly-build.yml  publish.yml
scripts/: commit_info.py
src/: App.css  App.tsx  Close.tsx  commit_info.d.ts  commit_info.json  main.tsx  style.css  watchFile.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file.rs  main.rs
src/commands/: about.tsx  closeWindow.tsx  fileInfo.tsx  format.tsx  openFile.tsx  saveFile.tsx  sourceCode.tsx  toggleAlwaysOnTop.tsx  zoom.ts
src/pages/: index.tsx  zoom.tsx
