[package]
name = "mdmemo"
version = "0.1.0"
description = "Notepad for Markdown"
authors = ["yutotnh <57719497+yutotnh@users.noreply.github.com>"]
lisence-file = "LICENSE"
repository = "https://github.com/yutotnh/mdmemo"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["app-all", "dialog-all", "os-all", "path-all", "shell-open", "window-close", "window-set-always-on-top", "window-set-title", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "0.18.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
